--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,18 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "joi": "^17.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@testing-library/dom": "^8.19.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
