--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-config-react-app": "^7.0.1",
     "jsdom": "^21.0.0",
     "prettier": "^2.8.2",
+    "react-icons": "^4.7.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vitest": "^0.27.0"
