--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "start": "yarn dev",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "lint:styles": "npx stylelint '**/*.css'",
+    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx, src"
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -26,19 +28,24 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "^8.31.0",
-    "eslint-config-react-app": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "jsdom": "^21.0.0",
     "prettier": "^2.8.2",
     "react-icons": "^4.7.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
-    "vitest": "^0.27.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "vitest": "^0.27.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-no-mixed-operators": "^1.1.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.14.0",
+    "stylelint": "^13.8.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-config-standard": "20.0.0"
   }
 }
