--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsnd src/index.ts",
-    "seed": "node scripts/seed.js"
+    "start": "npm run dev",
+    "seed": "node scripts/seed.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "mocha -r ts-node/register --exit -t 60000"
+  },
+  "mocha": {
+    "spec": [
+      "tests/integration/*.test.ts",
+      "tests/unit/**/*.test.ts"
+    ]
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,20 +23,40 @@
     "express-async-errors": "^3.1.1",
     "joi": "17.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "6.8.3",
+    "mongoose": "6.8.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
+    "@types/chai": "4.3.4",
+    "@types/chai-as-promised": "7.1.5",
+    "@types/chai-http": "4.2.0",
     "@types/express": "^4.17.15",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "10.0.1",
     "@types/node": "^18.11.18",
+    "@types/sinon": "10.0.13",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "chai": "4.3.7",
+    "chai-as-promised": "7.1.1",
+    "chai-http": "4.3.0",
     "dotenv": "^16.0.3",
+    "eslint": "8.32.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-plugin-editorconfig": "4.0.2",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-mocha": "10.1.0",
+    "eslint-plugin-sonarjs": "0.18.0",
+    "mocha": "10.2.0",
+    "sinon": "15.0.1",
     "http-status-codes": "^2.2.0",
+    "openapi-types": "^12.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
