--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "lint": "npx eslint --ext .js,.jsx,.ts,.tsx, src"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "joi": "^17.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2"
   },
@@ -27,15 +29,9 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "jsdom": "^21.0.0",
-    "prettier": "^2.8.2",
-    "react-icons": "^4.7.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vitest": "^0.27.0",
+    "@vitejs/plugin-react": "^3.0.1",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-immutable": "^1.0.0",
@@ -44,8 +40,14 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.14.0",
+    "jsdom": "^21.0.0",
+    "prettier": "^2.8.2",
+    "react-icons": "^4.7.1",
     "stylelint": "^13.8.0",
+    "stylelint-config-standard": "20.0.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-config-standard": "20.0.0"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vitest": "^0.27.0"
   }
 }
