--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-input-mask": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-react": "^3.0.1",
@@ -43,6 +44,7 @@
     "jsdom": "^21.0.0",
     "prettier": "^2.8.2",
     "react-icons": "^4.7.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "^4.1.0",
